--- a/eoffice.html
+++ b/eoffice.html
@@ -132,6 +132,9 @@
       }
 
       @media (max-width: 768px) {
+        header h1 {
+          font-size: 1rem;
+        }
         .stats-container {
           grid-template-columns: 1fr;
           height: auto;
