--- a/eoffice.html
+++ b/eoffice.html
@@ -77,10 +77,10 @@
 
       table {
         width: 100%;
-        min-width: 800px;
         border-collapse: collapse;
         background-color: white;
         box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+        margin: 0 auto;
       }
 
       th,
@@ -88,6 +88,7 @@
         padding: 12px 15px;
         text-align: center;
         border: 1px solid #ddd;
+        white-space: nowrap;
       }
 
       th {
@@ -103,16 +104,23 @@
 
       .search-container {
         margin-bottom: 20px;
-        text-align: right;
+        display: flex;
+        justify-content: center;
       }
 
       .search-container input {
-        padding: 8px 12px;
-        width: 100%;
-        max-width: 300px;
-        border: 1px solid #ced4da;
-        border-radius: 4px;
-        font-size: 14px;
+        padding: 10px 20px;
+        width: 80%;
+        max-width: 500px;
+        border: 2px solid #2c3e50;
+        border-radius: 25px;
+        font-size: 16px;
+        transition: all 0.3s ease;
+      }
+
+      .search-container input:focus {
+        outline: none;
+        box-shadow: 0 0 8px rgba(44, 62, 80, 0.3);
       }
 
       .note {
@@ -133,12 +141,14 @@
 
       @media (max-width: 768px) {
         header h1 {
-          font-size: 1.7rem;
+          font-size: 1.3rem;
         }
+
         .stats-container {
           grid-template-columns: 1fr;
           height: auto;
-          margin: 0 10px 10px;
+          margin: 10px;
+          padding: 10px;
         }
 
         .stat-item {
@@ -151,6 +161,14 @@
           border-bottom: none;
         }
 
+        .stat-value {
+          font-size: 20px;
+        }
+
+        .stat-label {
+          font-size: 12px;
+        }
+
         main {
           padding: 10px;
         }
@@ -158,7 +176,35 @@
         th,
         td {
           padding: 8px 10px;
-          font-size: 0.9rem;
+          font-size: 0.85rem;
+        }
+
+        .search-container input {
+          width: 90%;
+          padding: 8px 15px;
+          font-size: 14px;
+        }
+
+        table {
+          display: block;
+          overflow-x: auto;
+          white-space: nowrap;
+        }
+      }
+
+      @media (max-width: 480px) {
+        th,
+        td {
+          padding: 6px;
+          font-size: 0.8rem;
+        }
+
+        .stat-value {
+          font-size: 18px;
+        }
+
+        .stat-label {
+          font-size: 11px;
         }
       }
     </style>
@@ -270,7 +316,7 @@
           </tr>
           <tr>
             <td>6</td>
-            <td>CFP(O)</td>
+            <td>CFO(O)</td>
             <td>VIJAY KUMAR SINGH</td>
             <td>✓</td>
             <td>×</td>
