--- a/eoffice.html
+++ b/eoffice.html
@@ -299,7 +299,7 @@
           <tr>
             <td>4</td>
             <td>CFO(T)</td>
-            <td>ARUN KUMAR SINGH</td>
+            <td>SHRI ARUN KUMAR SINGH</td>
             <td>✓</td>
             <td>✓</td>
             <td>✓</td>
@@ -308,7 +308,7 @@
           <tr>
             <td>5</td>
             <td>CFO(F/P)</td>
-            <td>ANIMESH SINGH</td>
+            <td>SHRI ANIMESH SINGH</td>
             <td>✓</td>
             <td>✓</td>
             <td>✓</td>
@@ -317,7 +317,7 @@
           <tr>
             <td>6</td>
             <td>CFO(O)</td>
-            <td>VIJAY KUMAR SINGH</td>
+            <td>SHRI VIJAY KUMAR SINGH</td>
             <td>✓</td>
             <td>×</td>
             <td>✓</td>
@@ -326,7 +326,7 @@
           <tr>
             <td>7</td>
             <td>CFO(Tr)</td>
-            <td>BISHWAROOP BANARJEE</td>
+            <td>SHRI BISHWAROOP BANARJEE</td>
             <td>✓</td>
             <td>✓</td>
             <td>✓</td>
@@ -335,7 +335,7 @@
           <tr>
             <td>8</td>
             <td>F & AO</td>
-            <td>ASHOK KUMAR SINGH</td>
+            <td>SHRI ASHOK KUMAR SINGH</td>
             <td>×</td>
             <td>×</td>
             <td>×</td>
