--- a/eoffice.html
+++ b/eoffice.html
@@ -327,10 +327,10 @@
             <td>7</td>
             <td>CFO(Tr)</td>
             <td>SHRI BISHWAROOP BANARJEE</td>
-            <td>✓</td>
-            <td>✓</td>
-            <td>✓</td>
-            <td>✓</td>
+            <td>×</td>
+            <td>×</td>
+            <td>×</td>
+            <td>×</td>
           </tr>
           <tr>
             <td>8</td>
@@ -380,7 +380,7 @@
           <tr>
             <td>13</td>
             <td>ASIM</td>
-            <td>RACHANA MISHRA</td>
+            <td>RACHNA MISHRA</td>
             <td>✓</td>
             <td>✓</td>
             <td>✓</td>
@@ -434,7 +434,7 @@
           <tr>
             <td>19</td>
             <td>ASIM</td>
-            <td>VIVEK KUMAR GAUD</td>
+            <td>VIVEK KUMAR GOND</td>
             <td>×</td>
             <td>×</td>
             <td>×</td>
@@ -461,7 +461,7 @@
           <tr>
             <td>22</td>
             <td>ASIM</td>
-            <td>PRAWEEN KUMAR MISHRA</td>
+            <td>PRAVIN KUMAR MISHRA</td>
             <td>×</td>
             <td>×</td>
             <td>×</td>
