--- a/eoffice.html
+++ b/eoffice.html
@@ -138,7 +138,9 @@
         margin-top: 2rem;
         font-size: 0.9rem;
       }
-
+      .red {
+        background-color: rgb(243, 143, 143) !important;
+      }
       @media (max-width: 768px) {
         header h1 {
           font-size: 1.3rem;
@@ -273,10 +275,10 @@
             <td>1</td>
             <td>DG</td>
             <td>SHRI ADITYA MISHRA</td>
-            <td>×</td>
-            <td>×</td>
             <td>✓</td>
-            <td>×</td>
+            <td>✓</td>
+            <td>✓</td>
+            <td>✓</td>
           </tr>
           <tr>
             <td>2</td>
@@ -291,10 +293,10 @@
             <td>3</td>
             <td>DIG</td>
             <td>SHRI SURYA KANT TRIPATHI</td>
-            <td>×</td>
             <td>✓</td>
             <td>✓</td>
-            <td>×</td>
+            <td>✓</td>
+            <td>✓</td>
           </tr>
           <tr>
             <td>4</td>
@@ -327,19 +329,19 @@
             <td>7</td>
             <td>CFO(Tr)</td>
             <td>SHRI BISHWAROOP BANARJEE</td>
-            <td>×</td>
             <td>✓</td>
             <td>✓</td>
-            <td>×</td>
+            <td>✓</td>
+            <td>✓</td>
           </tr>
           <tr>
             <td>8</td>
             <td>F & AO</td>
             <td>SHRI ASHOK KUMAR SINGH</td>
-            <td>×</td>
-            <td>×</td>
-            <td>×</td>
-            <td>×</td>
+            <td>✓</td>
+            <td>✓</td>
+            <td>✓</td>
+            <td>✓</td>
           </tr>
           <tr>
             <td>9</td>
@@ -404,7 +406,7 @@
             <td>✓</td>
             <td>✓</td>
           </tr>
-          <tr>
+          <tr class="red">
             <td>16</td>
             <td>SI(Conf.)</td>
             <td>ABHINAV KUMAR SINGH</td>
@@ -413,7 +415,7 @@
             <td>✓</td>
             <td>×</td>
           </tr>
-          <tr>
+          <tr class="red">
             <td>17</td>
             <td>ASIM</td>
             <td>RATANDEEP SINGH</td>
@@ -422,7 +424,7 @@
             <td>✓</td>
             <td>×</td>
           </tr>
-          <tr>
+          <tr class="red">
             <td>18</td>
             <td>ASIM</td>
             <td>PRASHANT KUMAR</td>
@@ -431,7 +433,7 @@
             <td>✓</td>
             <td>×</td>
           </tr>
-          <tr>
+          <tr class="red">
             <td>19</td>
             <td>ASIM</td>
             <td>VIVEK KUMAR GOND</td>
@@ -440,7 +442,7 @@
             <td>✓</td>
             <td>×</td>
           </tr>
-          <tr>
+          <tr class="red">
             <td>20</td>
             <td>ASIM</td>
             <td>VINEETA</td>
@@ -449,18 +451,18 @@
             <td>✓</td>
             <td>×</td>
           </tr>
-          <tr>
+          <tr class="red">
             <td>21</td>
-            <td>ASIM</td>
+            <td>ASI(Account)</td>
             <td>UTKARSH ANAND</td>
             <td>×</td>
             <td>×</td>
             <td>✓</td>
             <td>×</td>
           </tr>
-          <tr>
+          <tr class="red">
             <td>22</td>
-            <td>ASIM</td>
+            <td>ASI</td>
             <td>PRAVIN KUMAR MISHRA</td>
             <td>×</td>
             <td>×</td>
