--- a/eoffice.html
+++ b/eoffice.html
@@ -328,7 +328,7 @@
           <tr>
             <td>7</td>
             <td>CFO(Tr)</td>
-            <td>SHRI BISHWAROOP BANARJEE</td>
+            <td>SHRI BISHWARUP BANERJEE</td>
             <td>✓</td>
             <td>✓</td>
             <td>✓</td>
